--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Evaluación final Módulo 1 PaulaPSoto</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
@@ -13,13 +15,16 @@
     <div class="page">
      <header class="headerbackground" >
        <div class="container_1">
-        <div class="logo">
+        <div class="container_1--logo">
           <a href="https://adalab.es/" target="_blank"><img class="header_logo" src="./assets/images/ico-menu.svg" alt="Burguer button"></a>
         </div>
        <div>
-         <h1 class="text">Anonymous proxy </h1> 
-          <h5 class="text2">In hac habitasse platea dictumst.</h5>
+         <h1 class="h1-text">Anonymous proxy </h1> 
+          <h5 class="h5-text">In hac habitasse platea dictumst.</h5> 
        </div>
+        <div class="container_1--img">
+          <img class="container_1--imgarrow" src="./assets/images/ico-scroll-down.svg" alt="ico-scroll-down">
+        </div>
       </div>
     </header>
     ---
