Add changes main__container

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,20 +20,20 @@
         </div>
        <div>
          <h1 class="h1-text">Anonymous proxy </h1> 
-          <h5 class="h5-text">In hac habitasse platea dictumst.</h5> 
+         <h5 class="h5-text">In hac habitasse platea dictumst.</h5> 
        </div>
         <div class="container_1--img">
-          <img class="container_1--imgarrow" src="./assets/images/ico-scroll-down.svg" alt="ico-scroll-down">
+          <img src="./assets/images/ico-scroll-down.svg" alt="ico-scroll-down">
         </div>
       </div>
     </header>
-    ---
+
     <main>
-      <div class="container">
-        <div> Insomnia tips</div>
-        <div>Looking through a window</div>
-        <div> Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</div>
-        <div> Go </div>
+      <div class="container main__container">
+        <div class="main__container--tips"> Insomnia tips</div>
+        <div class="main__container--title">Looking through a window</div>
+        <div class="main__container--text"> Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</div>
+        <div class="main__container--button container__button">Go</div>
       </div>
       ----
       <div class="container">
