join feactures to the button

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,6 +27,7 @@
     </header>
 <!-- section -->
     <section class="container container_2">
+
         <article class="section__container--tips"> Insomnia tips</article>
         <article class="section__container--title">Looking through a window</article>
         <article class="section__container--text"> Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</article>
@@ -50,13 +51,14 @@
          <p  class="container3__item2--text">Aliquam in dolor et dolor tincidunt.</p>
        </div>
        <div class="container3--item5">
-         <p  class="container3__item2--button">More Reasons</p>
+         <p  class="container3__item2--button">More reasons</p>
        </div>
     </section>
    
       
       
      <footer class="page__footer">
+      <div class="container_3--img"><img src="./assets/images/ico-arrow.svg" alt="ico-scroll-down"></div>
         <nav class="footer__nav">
           <ul >
             <li ><a title= "" class="nav-links" href="https://adalab.es/" target="_blank">Articles</a></li>
