--- a/src/html/index.html
+++ b/src/html/index.html
@@ -60,7 +60,7 @@
      <footer class="page__footer">
        
       <div class="container_3--img"><img src="./assets/images/ico-arrow.svg" alt="ico-arrow"></div>
-        <nav class="footer__nav">
+        <nav class="footer__nav1">
           <ul >
             <li class="li-links"><a title= "" class="nav-links" href="https://adalab.es/" target="_blank">Articles</a></li>
             <li class="li-links"><a title= "" class="nav-links" href="https://adalab.es/" target="_blank">Books</a></li>
@@ -70,7 +70,7 @@
          </ul>
         </nav>
 
-        <nav  class="footer__nav">
+        <nav  class="footer__nav2">
           <ul class="footer_ul">
             <li class="li-links"><a title= "Twiter" class="nav-links" href="https://adalab.es/" target="_blank">Twiter</a></li>
             <li class="li-links"><a title= "Instagram" class="nav-links" href="https://adalab.es/" target="_blank">Instagram</a></li>
