Add pisplay container

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -60,10 +60,10 @@
       
       
      <footer class="page__footer">
-       <div>
+       <div class="page__footer--box1">
         <a class="container_3--img"><img src="./assets/images/ico-arrow.svg" alt="ico-arrow"></a>
        </div>
-      <div>
+      <div class="page__footer--box2">
         <nav class="footer__nav footer__nav1">
           <ul >
             <li class="li-links"><a title= "" class="nav-links" href="https://adalab.es/" target="_blank">Articles</a></li>
