Add changes evaluation

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,6 +25,10 @@
         <a class="container_1--img" href="#section_reason" target="_blank"><img src="./assets/images/ico-scroll-down.svg" alt="ico-scroll-down"></a>
       </section>
     </header>
+    <section class="new__section">
+      <h2 class="new__section--title">Anonymous proxy</h2>
+      <p class="new__--section--text"><a class="new__section--link" href="https://trello.com/" target="_blank">14/ Enero/2020</a></p>
+    </section>
 <!-- section -->
     <section class="container container_2">
 
