Add layout with scss

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,102 +20,8 @@
   <body>
     <div class="page" id="top">
       <include src="./partials/header.html"></include>
-      <!-- section -->
-
-      <footer class="page__footer">
-        <div class="page__footer--box1">
-          <a class="container_3--img" href="#top"
-            ><img src="./assets/images/ico-arrow.svg" alt="top-page"
-          /></a>
-        </div>
-        <div class="page__footer--box2">
-          <nav class="footer__nav footer__nav1">
-            <ul>
-              <li class="li-links">
-                <a
-                  title=""
-                  class="nav-links"
-                  href="https://adalab.es/"
-                  target="_blank"
-                  >Articles</a
-                >
-              </li>
-              <li class="li-links">
-                <a
-                  title=""
-                  class="nav-links"
-                  href="https://adalab.es/"
-                  target="_blank"
-                  >Books</a
-                >
-              </li>
-              <li class="li-links">
-                <a
-                  title=""
-                  class="nav-links"
-                  href="https://adalab.es/"
-                  target="_blank"
-                  >Events</a
-                >
-              </li>
-              <li class="li-links">
-                <a
-                  title=""
-                  class="nav-links"
-                  href="https://adalab.es/"
-                  target="_blank"
-                  >Reasons</a
-                >
-              </li>
-              <li class="li-links">
-                <a
-                  title=""
-                  class="nav-links"
-                  href="https://adalab.es/"
-                  target="_blank"
-                  >Tips</a
-                >
-              </li>
-            </ul>
-          </nav>
-
-          <nav class="footer__nav footer__nav2">
-            <ul class="footer_ul">
-              <li class="li-links">
-                <a
-                  title="Twiter"
-                  class="nav-links"
-                  href="https://adalab.es/"
-                  target="_blank"
-                  >Twiter</a
-                >
-              </li>
-              <li class="li-links">
-                <a
-                  title="Instagram"
-                  class="nav-links"
-                  href="https://adalab.es/"
-                  target="_blank"
-                  >Instagram</a
-                >
-              </li>
-              <li class="li-links">
-                <a
-                  title="Mastodon.Social"
-                  class="nav-links"
-                  href="https://adalab.es/"
-                  target="_blank"
-                  >Mastodon.Social</a
-                >
-              </li>
-            </ul>
-          </nav>
-          <div class="footer__copy">
-            <small>&copy 2020</small>
-            <small>we&#128147;components</small>
-          </div>
-        </div>
-      </footer>
+      <include src="./partials/main.html"></include>
+      <include src="./partials/footer.html"></include>
     </div>
   </body>
 </html>
